Landing page content type css fixes for alignment and spacing

--- a/modules/vpsa_landing_page/css/vpsa-landing-page.css
+++ b/modules/vpsa_landing_page/css/vpsa-landing-page.css
@@ -1,30 +1,22 @@
 /* Landing Page content type styles */
 
 .node-type-vpsa-landing-page .node-vpsa-landing-page .field-collection-container {
-    border-top: 1px solid #8C1515;
-    margin-top: 1em;
-    padding-top: 1em;
-    width: 100%;
+  border-top: 1px solid #8C1515;
+  margin-top: 1em;
+  padding-top: 1em;
+  width: 100%;
 }
 
 .node-type-vpsa-landing-page .node-vpsa-landing-page .entity-field-collection-item {
-    border-bottom: 1px solid #8C1515;
-    margin-bottom: 1em;
-    padding-bottom: 0;
-    overflow: auto;
+  border-bottom: 1px solid #8C1515;
+  margin-bottom: 1em;
+  padding-bottom: 0;
+  overflow: auto;
 }
-
-/*.node-type-vpsa-landing-page .field-name-field-v-postcard-group .postcard-left .postcard-col2 {
-    padding-right: 30px;
-    width: 62%;
-}*/
 
 .node-type-vpsa-landing-page .field-name-field-v-postcard-group .field-name-field-v-link .field-item {
-    padding-bottom: .5em;
+  padding-bottom: .5em;
 }
-
-
-
 
 .field-name-field-v-postcard-group .content > div {
   display: table;
@@ -36,15 +28,16 @@
   text-align: left;
 }
 
-.field-name-field-v-postcard-group .content > div > div.group-v-postcard-col1 {
+.field-name-field-v-postcard-group .content > div .group-v-postcard-col1 {
   float: none;
   width: 13%;
 }
 
-.field-name-field-v-postcard-group .content > div > div.group-v-postcard-col2 > div {
-  padding-left: 2em;
+.field-name-field-v-postcard-group .content > div .group-v-postcard-col2 {
+  padding: 0 2em;
+  margin: 0 2em;
 }
 
-.field-name-field-v-postcard-group .content > div > div.group-v-postcard-col3 {
-   width: 15%;
+.field-name-field-v-postcard-group .content > div .group-v-postcard-col3 {
+   width: 25%;
 }
